# simple-trojan-rust

./: Cargo.toml  README.md
pem/: cert.pem  key.pem
src/: cli.rs  main.rs  server.rs
src/server/: mod.rs  trojan.rs
