[package]
name = "simple-trojan-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rustls = "0.23.10"
rustls-pemfile = "2.1.2"
tokio = { version = "1.38.0", features = ["full"] }
tokio-rustls = "0.26.0"
